<resources>
    <string name="app_name">IoT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="kitchen_btn">Kitchen toggle</string>
    <string name="room_btn">Corridor toggle</string>
    <string name="floor_btn">Turn off floor</string>
    <string name="alarm">Alarm</string>
    <string name="server_btn">Connect with server</string>
</resources>
