<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:id="@+id/kitchen_btn"
        android:text="@string/kitchen_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/room_btn"
        android:text="@string/room_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kitchen_btn"
        android:layout_alignRight="@+id/kitchen_btn"
        android:layout_alignEnd="@+id/kitchen_btn"
        android:layout_alignLeft="@+id/kitchen_btn"
        android:layout_alignStart="@+id/kitchen_btn" />

    <Button
        android:id="@+id/floor_btn"
        android:text="@string/floor_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/room_btn"
        android:layout_alignRight="@+id/room_btn"
        android:layout_alignEnd="@+id/room_btn"
        android:layout_alignLeft="@+id/room_btn"
        android:layout_alignStart="@+id/room_btn" />

    <Switch
        android:id="@+id/alarm_switch"
        android:text="@string/alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/floor_btn"
        android:layout_alignRight="@+id/floor_btn"
        android:layout_alignEnd="@+id/floor_btn"
        android:layout_alignLeft="@+id/floor_btn"
        android:layout_alignStart="@+id/floor_btn"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/debug_text_view"
        android:text="DEBUG MODE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_switch"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/gcm_send_btn"
        android:text="@string/server_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/debug_text_view"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/endpoint_edit_text"
        android:hint="Endpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gcm_send_btn"
        android:layout_alignLeft="@+id/gcm_send_btn"
        android:layout_alignStart="@+id/gcm_send_btn"
        android:layout_alignRight="@+id/gcm_send_btn"
        android:layout_alignEnd="@+id/gcm_send_btn" />

    <Button
        android:id="@+id/endpoint_btn"
        android:text="Set endpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endpoint_edit_text"
        android:layout_alignRight="@+id/floor_btn"
        android:layout_alignEnd="@+id/floor_btn"
        android:layout_alignLeft="@+id/floor_btn"
        android:layout_alignStart="@+id/floor_btn" />

</RelativeLayout>
